--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "gulp": "3.5.x",
-        "cucumber" : "0.4.x"
+        "cucumber" : "0.4.x",
+        "chai" : "1.9.x"
     }
 }
