--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "gulp": "3.5.x",
         "cucumber" : "0.4.x",
-        "chai" : "1.9.x"
+        "chai" : "1.9.x",
+        "sinon" : "1.10.x"
     }
 }
